--- a/index.html
+++ b/index.html
@@ -21,11 +21,19 @@
    
    <div> 
       <div class="contentHeder">
-        <img src="./media/logo.jpg" width="150px" alt="" srcset="">
+        <img src="./media/prof.png" width="150px" alt="" srcset="">
         <div class="rightTitel">
-          <h1>Hi, I'm <span class="myName">Mustafa</span></h1>
+          <h1>Hi, I'm <span class="myName">Ahmad</span></h1>
           <p class="myJob">I'm <span class="myJob">Web Developer</span></p>
         </div>
+      <div class="primeOrNot">
+        <form class="primeForm" action="">
+          <input type="number" name="num" id="primeInput" placeholder="Enter Your Nomber" class="input">
+          <br>
+          <br>
+        </form>
+        <p class="primeResult"></p>
+      </div>
 
       </div>
    
