--- a/pages/imgeProfile.html
+++ b/pages/imgeProfile.html
@@ -23,10 +23,11 @@
       <div class="contentHeder">
         <img id="prof" src="../media/prof.png" alt="" srcset="">
       </div>
+      <button onclick="changeUp()" id="upImg">upToImg</button> 
   </div>
    <div id="fotter">
      <p>i am fotter</p>
    </div>
-   <script src="./js/index.js"></script>
+   <!-- <script src="./js/index.js"></script> -->
 </body>
 </html>
