--- a/pages/append.html
+++ b/pages/append.html
@@ -1,1 +1,15 @@
-<script src="../js/append.js"></script>
+<!DOCTYPE html>
+<html>
+    <head>
+
+    </head>
+    <body>
+        <table>
+            <tbody>
+                
+            </tbody>
+        </table>
+        <script src="../js/append.js"></script>
+    </body>
+   
+</html>
