--- a/index.html
+++ b/index.html
@@ -26,10 +26,16 @@
         <div class="rightTitel">
           <h1>Hi, I'm <span class="myName">Ahmad</span></h1>
           <p class="myJob">I'm <span class="myJob">Web Developer</span></p>
+          <div>
+          <form class="userInput" action="">
+            <input type="text" name="name" id="name" placeholder="Enter Your Name" class="input">
+            <input type="submit" value="submit">
+          </form>
+        </div>
         </div>
       <div class="primeOrNot">
         <form class="primeForm" action="">
-          <input type="number" name="num" id="primeInput" placeholder="Enter Your Nomber" class="input">
+          <input type="number" name="num" id="nameInbut" placeholder="Enter Your Name" class="input">
           <br>
           <br>
         </form>
